--- a/src/components/Header/Header.styles.css
+++ b/src/components/Header/Header.styles.css
@@ -1,7 +1,14 @@
 .header {
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  border-bottom: 0.1px solid lightgray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+  z-index: 999;
 }
 
 .header__left {
@@ -12,6 +19,7 @@
   object-fit: contain;
   height: 40px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .header__search {
@@ -28,4 +36,9 @@
   outline: none;
   border: none;
   background: none;
+}
+
+.header__right {
+  display: flex;
+  flex-direction: row;
 }
